I added a jumbotron and changed the background color to light brown

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
 #bookingConfirmation {
   display: none;
 }
+.jumbotron {
+  background-color: #696969;
+}
+
+.container {
+  background-color: #666633;
+}
